# PydanticAI-Bank-Support-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.yml  pyproject.toml
agent/: cli.py  dependencies.py  exceptions.py  instructions.py  main.py  models.py  output.py  tools.py
agent/core/: exceptions.py  settings.py  tools.py
agent/core/database/: engine.py  mixins.py  utils.py
agent/scripts/: seed.py
agent/services/: bank_db.py  currency.py
agent/tests/: conftest.py  test_agent.py
